--- a/styles.css
+++ b/styles.css
@@ -870,6 +870,30 @@ footer {
   margin: 0 auto;
 }
 
+/* ------------- Gallery Page --------------- */
+.gallery-container-outer {
+}
+
+.gallery-container-inner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 3rem;
+  max-width: 95rem;
+  padding: 10rem 1rem;
+  margin: 0 auto;
+}
+
+.gallery-container-inner img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+/* change  the border colour  of the lightbox images */
+.lb-outerContainer .lb-image {
+  border: 5px solid var(--theme-color-3) !important;
+}
+
 /* ------------- Contact Us Page --------------- */
 #contact-us-body header {
   position: sticky;
