--- a/styles.css
+++ b/styles.css
@@ -871,14 +871,11 @@ footer {
 }
 
 /* ------------- Gallery Page --------------- */
-.gallery-container-outer {
-}
-
 .gallery-container-inner {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 3rem;
-  max-width: 95rem;
+  gap: 2rem;
+  max-width: 100rem;
   padding: 10rem 1rem;
   margin: 0 auto;
 }
@@ -887,6 +884,12 @@ footer {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  border-radius: 0.5rem;
+  transition: transform 500ms ease-in-out;
+}
+
+.gallery-container-inner img:hover {
+  transform: scale(1.01);
 }
 
 /* change  the border colour  of the lightbox images */
