--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,7 @@
   --theme-color-1: #3c7f8f;
   --theme-color-2: #1d1f1d;
   --theme-color-3: #fffff0;
-  --theme-color-4: #29335c;
-  --theme-color-5: #8d3b72;
+  --theme-color-4: #232523;
   /* Accent Colors */
 
   --accent-color-1: #ffa126;
@@ -76,6 +75,16 @@ button {
 
 img {
   width: 100%;
+}
+
+/* Animations */
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*------------------ Nav Bar ------------------ */
@@ -309,6 +318,10 @@ nav a:hover::after {
   font-weight: 400;
   text-align: center;
   color: var(--theme-color-3);
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .our-classes-section-container-outer {
@@ -464,6 +477,10 @@ nav a:hover::after {
   position: absolute;
   font-size: 2.25rem;
   top: -6.5rem;
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .benefits-text-container h2::after {
@@ -572,7 +589,7 @@ nav a:hover::after {
 
 /* Ready To Join */
 .ready-to-join-container-outer {
-  background-color: var(--theme-color-2);
+  background-color: var(--theme-color-4);
 }
 
 .ready-to-join-container-inner {
@@ -600,6 +617,10 @@ nav a:hover::after {
   font-size: 2rem;
   font-weight: 600;
   margin-top: 4rem;
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .first-class-container-inner {
@@ -648,6 +669,10 @@ nav a:hover::after {
   font-weight: 400;
   text-align: center;
   color: var(--theme-color-2);
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .timetable-section-container-inner {
@@ -759,6 +784,10 @@ tr td {
   font-size: 2.5rem;
   font-weight: 400;
   text-align: center;
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
 }
 
 .faq-section-container-inner {
@@ -800,6 +829,10 @@ button[aria-expanded="true"] + .faq-answer {
   flex-direction: column;
   border-bottom: 2px solid var(--accent-color-3);
   margin-bottom: 1rem;
+
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 25% cover 25%;
 }
 
 .question-title {
