Slide  in animation for "Your First Class" tips
Using an IntersectionObserver to create a sliding-in animation on scroll for each of the tips in the "Your First Class" section.

--- a/styles.css
+++ b/styles.css
@@ -656,6 +656,32 @@ nav a:hover::after {
   background-color: red;
 }
 
+.hidden {
+  opacity: 0;
+  filter: blur(3px);
+  transform: translateX(-100%);
+  transition: all 1s;
+}
+
+.hidden:nth-child(2) {
+  transition-delay: 200ms;
+}
+.hidden:nth-child(3) {
+  transition-delay: 400ms;
+}
+
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0%);
+}
+
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+
 /*------------ Timetable Section Desktop ------------- */
 .timetable-section-container-outer {
   position: relative;
