--- a/styles.css
+++ b/styles.css
@@ -410,28 +410,22 @@ nav a:hover::after {
 }
 
 .card1 {
-  background-image: url(./images/bjj.svg);
-  background-image: url("https://source.unsplash.com/random/?bjj/");
+  background-image: url("https://images.unsplash.com/photo-1564415315949-7a0c4c73aab4?q=80&w=3152&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
 }
 .card2 {
-  background-image: url(./images/muay-thai.svg);
-  background-image: url("https://source.unsplash.com/random/?karate/");
+  background-image: url("https://images.unsplash.com/photo-1608583252022-09323426b8b6?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGthcmF0ZXxlbnwwfHwwfHx8MA%3D%3D");
 }
 .card3 {
-  background-image: url(./images/kickboxing.svg);
-  background-image: url("https://source.unsplash.com/random/?muaythai/");
+  background-image: url("https://images.unsplash.com/photo-1637974013743-82656f7c3f49?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fG11YXklMjB0aGFpfGVufDB8fDB8fHww");
 }
 .card4 {
-  background-image: url(./images/karate.svg);
-  background-image: url("https://source.unsplash.com/random/?kickboxing/");
+  background-image: url("https://images.unsplash.com/photo-1584863528123-65b675cc9009?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTV8fGtpY2tib3hpbmd8ZW58MHx8MHx8fDA%3D");
 }
 .card5 {
-  background-image: url(./images/kung-fu.svg);
-  background-image: url("https://source.unsplash.com/random/?kungfu/");
+  background-image: url("https://images.unsplash.com/photo-1514050566906-8d077bae7046?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fG1hcnRpYWwlMjBhcnRzfGVufDB8fDB8fHww");
 }
 .card6 {
-  background-image: url(./images/wonhwado.png);
-  background-image: url("https://source.unsplash.com/random/?martial-art/");
+  background-image: url("https://images.unsplash.com/photo-1602827115134-d366b3148ba5?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fG1hcnRpYWwlMjBhcnRzfGVufDB8fDB8fHww");
 }
 
 /* ------------ Class Page Layout ----------- */
