--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ nav a:hover::after {
 
 .cta {
   display: block;
-  padding: 0.5rem;
+  padding: 0.65rem;
   text-align: center;
   color: var(--theme-color-3);
   border-radius: 0.25rem;
@@ -271,6 +271,70 @@ nav a:hover::after {
 }
 
 /* Added styles for hover effect */
+
+.draw-border {
+  box-shadow: inset 0 0 0 4px #58afd1;
+  color: #58afd1;
+  transition: color 0.25s 0.0833333333s;
+  position: relative;
+  border-radius: 0.25rem;
+}
+
+.draw-border::before,
+.draw-border::after {
+  border: 0 solid transparent;
+  box-sizing: border-box;
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 0.25rem;
+}
+
+.draw-border::before {
+  border-bottom-width: 3px;
+  border-left-width: 3px;
+}
+.draw-border::after {
+  border-top-width: 3px;
+  border-right-width: 3px;
+}
+
+.draw-border:hover::before,
+.draw-border:hover::after {
+  border-color: var(--accent-color-1);
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border-black:hover::before,
+.draw-border-black:hover::after {
+  border-color: var(--theme-color-4);
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border:hover::before {
+  transition-delay: 0s, 0s, 0.25s;
+}
+.draw-border:hover::after {
+  transition-delay: 0s, 0.25s, 0s;
+}
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  font: 700 1.2rem "Roboto Slab", sans-serif;
+  padding: 1em 2em;
+  letter-spacing: 0.05rem;
+}
 
 /*------------------ About Us Section ------------------ */
 .about-us-section-container-outer {
