--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ nav a:hover::after {
   color: var(--theme-color-2);
 }
 
-/* Added styles for hover effect */
+/* Added styles for hover effect on CTA buttons */
 
 .draw-border {
   box-shadow: inset 0 0 0 4px #58afd1;
@@ -314,6 +314,14 @@ nav a:hover::after {
 .draw-border-black:hover::before,
 .draw-border-black:hover::after {
   border-color: var(--theme-color-4);
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+
+.draw-border-white:hover::before,
+.draw-border-white:hover::after {
+  border-color: var(--theme-color-3);
   transition: border-color 0s, width 0.25s, height 0.25s;
   width: 100%;
   height: 100%;
