Adding Users message to the thank you page

--- a/styles.css
+++ b/styles.css
@@ -1294,6 +1294,12 @@ iframe {
   gap: 0.5rem;
 }
 
+#user-message {
+  color: black;
+  font-size: 0.9rem;
+  font-style: italic;
+}
+
 .fa-check {
   font-size: 1rem;
   padding: 0.35rem;
