Updating contact-us page height to 100vh so it stretches the full length of the page

--- a/styles.css
+++ b/styles.css
@@ -1153,6 +1153,10 @@ footer {
 }
 
 /* ------------- Contact Us Page --------------- */
+
+#contact-us-body {
+  height: 100vh;
+}
 #contact-us-body header {
   position: sticky;
 }
