--- a/styles.css
+++ b/styles.css
@@ -494,13 +494,13 @@ nav a:hover::after {
 
 /* Card - Karate */
 .card-kenpo-karate {
-  background-image: url("./images/our-class-karate.jpeg");
+  background-image: url("./images/our-class-karate.webp");
   position: relative;
 }
 
 /* Card - Muay  Thai */
 .card-muay-thai {
-  background-image: url("./images/our-class-muay-thai.jpeg");
+  background-image: url("./images/our-class-muay-thai.webp");
   position: relative;
 }
 
@@ -529,17 +529,17 @@ nav a:hover::after {
 
 /* Card - Kickboxing */
 .card-kickboxing {
-  background-image: url("./images/our-classes-kickboxing.png");
+  background-image: url("./images/our-classes-kickboxing.webp");
 }
 
 /* Card - Wing Tsun */
 .card-wing-tsun {
-  background-image: url("./images/our-class-wing-tsun.png");
+  background-image: url("./images/our-class-wing-tsun.webp");
 }
 
 /* Card - Korean Kickboxing  */
 .card-korean-kickboxing {
-  background-image: url("./images/our-classes-korean-kickboxing.png");
+  background-image: url("./images/our-classes-korean-kickboxing.webp");
 }
 
 /* ------------ Class Page Layout ----------- */
@@ -657,7 +657,7 @@ nav a:hover::after {
 
 /* ------------ Class Page - BJJ ----------- */
 .benefits-image.bjj {
-  background: url(./images/page-bjj-02.png);
+  background: url(./images/page-bjj-02.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center right 75%;
@@ -665,7 +665,7 @@ nav a:hover::after {
 
 /* ------------ Class Page - Mauy-Thai ----------- */
 .benefits-image.muay-thai {
-  background: url("./images/page-muay-thai-02.png");
+  background: url("./images/page-muay-thai-02.webp");
   background-size: cover;
   background-position: center;
 }
@@ -708,26 +708,26 @@ aside.arrow:after {
 
 /* ------------ Class Page - Karate ----------- */
 .benefits-image.karate {
-  background: url("./images/page-karate-02.png");
+  background: url("./images/page-karate-02.webp");
   background-size: cover;
   background-position: center;
 }
 
 /* ------------ Class Page - Kickboxing ----------- */
 .benefits-image.kickboxing {
-  background: url("./images/page-kickboxing-02.png");
+  background: url("./images/page-kickboxing-02.webp");
   background-size: cover;
   background-position: center;
 }
 /* ------------ Class Page - Wing Tsun Kung Fu ----------- */
 .benefits-image.kung-fu {
-  background: url("./images/page-wing-tsun-02.png");
+  background: url("./images/page-wing-tsun-02.webp");
   background-size: cover;
   background-position: center;
 }
 /* ------------ Class Page - Korean Kickboxing ----------- */
 .benefits-image.korean-kickboxing {
-  background: url("./images/page-korean-kickboxing-02.png");
+  background: url("./images/page-korean-kickboxing-02.webp");
   background-size: cover;
   background-position: center;
 }
