--- a/styles.css
+++ b/styles.css
@@ -1685,11 +1685,18 @@ body#what-is-bjj header {
 }
 
 body#what-is-bjj main {
+  display: grid;
+  gap: 3rem;
   height: 100%;
   max-width: 45rem;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 4rem 1rem;
   color: var(--theme-color-2);
+}
+
+.blog-image {
+  border-radius: 1.5rem;
+  margin: 3rem 0 0 0;
 }
 
 /* Tablet Layout */
