--- a/styles.css
+++ b/styles.css
@@ -1694,10 +1694,10 @@ body#what-is-bjj main {
 
 .blog-container-inner {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   gap: 3rem;
   max-width: 75rem;
-  margin: 5rem auto 0 auto;
+  margin: 8rem auto 0 auto;
   padding: 1rem;
 }
 
@@ -1707,11 +1707,12 @@ body#what-is-bjj main {
 }
 
 .blog-container-inner a:hover {
-  scale: 1.05;
+  scale: 1.01;
   transition: scale 0.3s ease-in-out;
 }
 
 .blog-card img {
+  border-radius: 1rem;
 }
 
 .blog-card-eyebrow {
