--- a/styles.css
+++ b/styles.css
@@ -788,6 +788,48 @@ aside.arrow:after {
 }
 
 /* ------------ Shop Section ----------- */
+
+/* Flip on hover for desktop */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg); /* Flip to show back on hover */
+}
+
+/* You can remove the flipped class and JavaScript function */
+
+.shop-section-container-outer {
+  background-color: var(--theme-color-2) !important;
+}
+
+.shop-section-container-outer h2 {
+  position: relative;
+  top: 4.5rem;
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-align: center;
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
+  color: var(--theme-color-3);
+}
+
+/* ------------ Shop Section ----------- */
+.shop-section-container-outer {
+  background-color: var(--theme-color-2) !important;
+}
+
+.shop-section-container-outer h2 {
+  position: relative;
+  top: 4.5rem;
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-align: center;
+  animation: fade linear both;
+  animation-timeline: view();
+  animation-range: entry 50% cover 50%;
+  color: var(--theme-color-3);
+}
+
+/* ------------ Shop Section ----------- */
 .shop-section-container-outer {
   background-color: var(--theme-color-2) !important;
 }
@@ -844,20 +886,8 @@ aside.arrow:after {
 }
 
 /* Flip on hover for desktop */
-@media (min-width: 768px) {
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg); /* Flip to show back on hover */
-  }
-}
-
-/* Flip on click for mobile */
-.flip-card.flipped .flip-card-inner {
-  transform: rotateY(180deg); /* Flip to show back */
-}
-
-/* Ensure that cards return to the original position when flipped back */
-.flip-card:not(.flipped) .flip-card-inner {
-  transform: rotateY(0deg); /* Make sure it's back to original */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg); /* Flip to show back on hover */
 }
 
 /* Image styling */
