--- a/styles.css
+++ b/styles.css
@@ -1839,7 +1839,7 @@ body#blog-page main {
 #blog h1 {
   position: relative;
   color: var(--theme-color-2);
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: lighter;
   top: 6rem;
   text-align: center;
@@ -1877,6 +1877,32 @@ body#blog-page main {
 }
 
 .blog-card-text {
+}
+
+/* Blog Navigation */
+.blog-navigation-container {
+  max-width: 45rem;
+  margin: 0 auto 1rem auto;
+  padding: 0 1rem;
+  width: 100%;
+}
+
+.blog-navigation {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blog-navigation a {
+  color: var(--theme-color-2);
+}
+
+.fa-chevron-left::before {
+  color: var(--theme-color-2);
+  margin-right: 1rem;
+}
+.fa-chevron-right::before {
+  color: var(--theme-color-2);
+  margin-left: 1rem;
 }
 
 /* Tablet Layout */
