--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ nav a:hover::after {
 
 .about-us-text h2 {
   font-size: 1.2rem;
-  color: var(--accent-color-1);
+  color: var(--accent-color-2);
   font-weight: 500;
 }
 
@@ -1255,7 +1255,7 @@ footer {
 }
 
 .read-blog {
-  margin: 0;
+  margin: 0.1rem;
 }
 
 .designed-by,
